# video-app

./: .gitmodules  CMakeLists.txt  README.md
lib/FFmpeg/: CMakeLists.txt
src/: README.md  load_frame.cpp  main.cpp  player.cpp  player.hpp  sound_reader.cpp  sound_reader.hpp  video-app  video_reader.cpp  video_reader.hpp
